<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".HomeScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/homeScreen_firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="30dp">
                <TextView
                    android:layout_width="match_parent"
                    android:drawableTop="@drawable/engineproblems"
                    android:drawablePadding="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/car_problems_and_repair"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:drawableTop="@drawable/airconditioner"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/airconditioning_problems"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout
>

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/homeScreen_secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeScreen_firstRow"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:drawableTop="@drawable/battery"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/battery_charging_problems"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="30dp">
                <TextView
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/discbrake"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/brake"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/homeScreen_thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeScreen_secondRow"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:drawableTop="@drawable/engineer"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/engine_cooling_system_problems"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/smokers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/emission_control"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/homeScreen_fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeScreen_thirdRow"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="30dp">
                <TextView
                    android:drawableTop="@drawable/engine"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/engine_diagnosis_and_repair"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:drawablePadding="10dp"
                    android:drawableTop="@drawable/sensor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/engine_sensor_system_diagnosis"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>