<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    tools:context="com.kwykfyxapp.kwykfyx.browse.BrowseCategoriesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/homeScreen_firstRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/browse_carProblemsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/browse_carProblemsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/engineproblems"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:padding="30dp"
                    android:text="@string/car_problems_and_repair"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/browse_airconditioningLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/browse_airconditioningTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/airconditioner"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:padding="30dp"
                    android:text="@string/airconditioning_problems"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeScreen_secondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeScreen_firstRow"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/browse_batteryChargingLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/browse_batteryChargingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/battery"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:padding="30dp"
                    android:text="@string/battery_charging_problems"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/browse_brakeAntilockLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/browse_brakeAntilockTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/discbrake"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:padding="30dp"
                    android:text="@string/brake"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeScreen_thirdRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeScreen_secondRow"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/browse_engineCoolingLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/browse_engineCoolingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/engineer"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:padding="30dp"
                    android:text="@string/engine_cooling_system_problems"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/browse_emissionControlLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/browse_emissionControlTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/smokers"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:padding="30dp"
                    android:text="@string/emission_control"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeScreen_fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeScreen_thirdRow"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/browse_engineDiagnosisLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/browse_engineDiagnosisTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/engine"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:padding="30dp"
                    android:text="@string/engine_diagnosis_and_repair"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/browse_engineSensorLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/browse_engineSensorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableTop="@drawable/sensor"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:padding="30dp"
                    android:text="@string/engine_sensor_system_diagnosis"
                    android:textAlignment="center"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>